[tool.poetry]
name = "scrapydoo"
version = "0.1.0"
description = "Scrapy dappy doo crawler for proxy sites"
authors = ["Md Zubair Beg <scrapydoo@zube.dev>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
scrapy = "^2.11"
scrapyd = "^1.4"
scrapyd-client = "^1.2"
scrapy-playwright = "^0.0.32"

[tool.poetry.group.dev.dependencies]
black = "^23.9"
ruff = "^0.0.292"
mypy = "^1.6"
pre-commit = "^3.5"
types-requests = "^2.31"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120
# https://beta.ruff.rs/docs/rules
extend-select = ["I", "N", "PT", "UP"]
extend-exclude = ["migrations"]
target-version = "py311"

[tool.mypy]
ignore_missing_imports = true
implicit_reexport = true
strict = true
